--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,6 +9,8 @@ DBID = 54529369
 R2DOMAIN = "https://db.wpista.com"
 WOKRERDOMAIN = "https://dbapi.wpista.com"
 PAGESIZE = 40
+TYPES = "book,music,game,drama"
+TOKEN = "richiscool"
 
 # [[kv_namespaces]]
 # binding = "MY_KV_NAMESPACE"
@@ -27,4 +29,4 @@ database_id = "c3f4fe6b-4fb2-4513-b7e9-3b264d3e3634"
 # binding = "AI"
 
 [triggers]
-crons = ["* * * * *"]
+crons = ["*/30 * * * *"]
