feat:add status

--- a/config.env
+++ b/config.env
@@ -1,4 +1,5 @@
 DOUBAN_ID=54529369
-TYPES=movie,music,book,game,drama
-WORKER_URL=https://dbapi.wpista.com
+TYPES=movie,book,music,game,drama
+STATUSES = done,mark,doing
+WORKER_URL=http://localhost:8787
 TOKEN=richiscool
