--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 DOUBAN_ID=54529369
 TYPES=movie,book,music,game,drama
 STATUSES = done,mark,doing
-WORKER_URL=http://localhost:8787
+WORKER_URL=https:/dbapi.wpista.com
 TOKEN=richiscool
