--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
     "scripts": {
         "dev": "wrangler dev src/index.ts",
         "deploy": "wrangler deploy --minify src/index.ts",
-        "init": "node --env-file=config.env scripts/init.js"
+        "init": "node --env-file=config.env scripts/init.js",
+        "test": "vitest",
+        "test:run": "vitest run",
+        "typecheck": "tsc --noEmit"
     },
     "dependencies": {
-        "hono": "^4.3.7"
+        "hono": "^4.11.8"
     },
     "devDependencies": {
-        "@cloudflare/workers-types": "^4.20240403.0",
-        "wrangler": "^3.47.0"
+        "@cloudflare/workers-types": "^4.20260207.0",
+        "@types/node": "^25.2.1",
+        "typescript": "^5.9.3",
+        "vitest": "^4.0.18",
+        "wrangler": "^4.63.0"
     }
 }
