--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,9 +13,13 @@ jobs:
             - uses: actions/setup-node@v4
               with:
                   node-version: "20"
-                  cache: npm
             - name: Install dependencies
-              run: npm ci
+              run: |
+                  if [ -f package-lock.json ]; then
+                    npm ci
+                  else
+                    npm install
+                  fi
             - name: Type check
               run: npm run typecheck
             - name: Unit tests
